Refactored to avoid streaming over the list twice.